[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-match-predictor"
version = "0.1.0"
description = "ATP singles match prediction and tournament simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.4",
  "joblib>=1.3",
  "lxml>=5.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=6.0",
  "pycryptodome>=3.23",
  "requests>=2.32",
  "scikit-learn>=1.3",
  "streamlit>=1.50",
  "xgboost>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
